[package]
name = "certstream-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# websocket ops
url = "2.2.2" # handle websocket URLS
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.8"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
# async ops
async-stream = "0.3.3"
futures-util = "0.3.21"
ctrlc = "3.2.2" # graceful exits
itertools = "0.10.3" # vector iteration
rocksdb = { version = "0.18.0", features = ["lz4"] } # storage for domains
# JSON tooling
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
